AM 14/06/2005
VERSION 0.4 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 14/06/05
- Modified the configuration mechanism in order to perform computations
  with BigInteger instead of doubles converted to long. To do so, this
  version compiles only with jep2.3.0 and djep1.0.0.
- Added an experimental configuration mechanism that tries to give
  suggestions when properties are not found. just an attempt, can
  be removed.
- Corrected a bug in peersim.cdsim.OrderSimulator, in order to enable
  to run dynamics with the FINAL specification.
- Simplified the protocol creation mechanism in GeneralNode; in this
  way, protocols that have been already created can be referenced by
  other protocols in their constructors.
- corrected some documentation

MJ 14/06/05
- Added some methods to IncrementalFreq (submitted by Spyros Voulgaris)

MJ 31/05/05
- Removed unused argument from IncrementalFreq.getN(), and changed some
  of the fields in IncrementalFreq from private to protected
- CHANGED BEHAVIOUR OF WireRegualrRandom. It was not realy regular all the time
  because neighbors were sampled with replacement, and no parallel edges were
  added. Now it is realy regular. This has only a negligible effect on most
  of the scenarios peersim was used in so far, but at least this is finally
  fixed.

MJ 26/05/05
- getString now removes trailing spaces from string value parameters
  in the configuration

AM 13/05/05
- modified the configuration parsing mechanism with a very simple extension
  for brackets.
  Writing something like:
  
  observer.degree GraphObserver 
  {
    protocol newscast
    undir
    graphobserver.fast
  }
  defines four properties:
  
  observer.degree GraphObserver 
  observer.degree.protocol newscast
  observer.degree.undir
  observer.degree.graphobserver.fast
  
  See documentation for additional details (and limits).